<resources>
    <string name="app_name">افهمها و عيشها</string>

    <string name="content">الحمد لله رب العالمين, والعاقبة للمتقين, ولا عدوان إلا على الظالمين, والصلاة والسلام على نبيه الأمين, وعلى آله الغر الميامين, وعلى صحابته الكرام أجمعين, وعلى التابعين لهم بإحسان إلى يوم الدين..أما بعد: حتى نحصل على  الثمرة المرجوة من الصيام لابد أن يكون صيامنا كما كان عليه حال سلفنا الصالح, تنافساً في الطاعات, وتزوداً من النوافل والقربات, ومن أهمها أداء الفرائض مع جماعة المسلمين, والحرص على أداء صلاة التراويح والقيام, وبذل الصدقات للمحتاجين, وتجنب كل ما يطعن ويفسد الصيام من الأقوال والأفعال.</string>
    <string name="title">الصائمون الأوائل</string>
    <string name="image_icon">Image Icon</string>
    <string name="signIn">تسجيل الدخول</string>
    <string name="forget_your_password">هل نسيت كلمة السر؟</string>
    <string name="or">أو</string>
    <string name="google"> بواسطه جوجل</string>
    <string name="facebook">بواسطه فيسبوك</string>
    <string name="create_new_account">لست عضوا لدينا؟ سجل جديد</string>
    <string name="show">اظهار</string>
    <string name="register">تسجيل</string>
    <string name="forget_password">هل نسيت كلمة السر ؟</string>
    <string name="reset_password">اعادة تعيين كلمة السر</string>
    <string name="reset_password_instructions">لإعادة تعيين كلمة السر ، أدخل بريدك الإلكتروني ، واضغط على الزر وتحقق من البريد الألكتروني و أتبع التعليمات.</string>

    //Notification
    <string name="default_notification_channel_id" translatable="false">أفهمها وعيشها</string>
    <string name="default_notification_channel_des" translatable="false">اشعار من أفهمها وعيشها</string>


    // Facebook
    <string name="facebook_app_id">1080893165427925</string>
    <string name="fb_login_protocol_scheme">fb1080893165427925</string>

    <string name="demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque hendrerit ac orci vitae viverra. Aliquam mollis, risus in viverra rhoncus, neque odio iaculis nisl, nec congue erat elit eget mauris. Vestibulum nec risus lorem. Proin ultrices, est eget vestibulum ultrices, dui ligula pellentesque lectus, sed feugiat mi lectus eget ante. Donec congue suscipit massa sit amet mattis. Vivamus ornare, ex eget condimentum fermentum, sapien est scelerisque lorem, non dapibus ipsum purus sit amet velit. Sed facilisis egestas ante quis scelerisque. In hac habitasse platea dictumst. Vestibulum congue luctus sem at semper.</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="info">"افهمها و عيشها" هي أول منصة اعلامية الكترونية مصرية لحوار ثقافات الأديان, حيث تهتم بتقديم محتوي صحفي هادف يساهم في تجديد الخطاب الديني ونشر ثقافة التسامح.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
