<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn.SignInActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/signIn_logo_imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/image_icon"
        android:foregroundGravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signIn_email_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/back_border_white"
        android:hint="البريد الإلكتروني"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/signIn_logo_imageView" />

    <EditText
        android:id="@+id/signIn_password_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_border_white"
        android:hint="كلمة السر"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/signIn_email_editText" />

    <TextView
        android:id="@+id/signIn_forget_password_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forget_your_password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/signIn_password_editText" />

    <Button
        android:id="@+id/signIn_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/back_solid_primary"
        android:text="@string/signIn"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/signIn_forget_password_text_view" />

    <TextView
        android:id="@+id/signIn_signUp_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_new_account"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/signIn_button" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginRight="16dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/or_textView"
        app:layout_constraintEnd_toStartOf="@id/or_textView"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/or_textView">

    </View>

    <TextView
        android:id="@+id/or_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/signIn_signUp_text_view" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/or_textView"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/or_textView"
        app:layout_constraintTop_toTopOf="@id/or_textView">
    </View>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/or_textView"
        >

        <Button
            android:id="@+id/signIn_google_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/back_solid_google"
            android:drawableLeft="@drawable/ic_google"
            android:paddingLeft="16dp"
            android:paddingRight="0dp"
            android:text="@string/google"
            android:textColor="@color/colorWhite"
            />
        <Button
            android:id="@+id/signIn_facebook_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/back_solid_facebook"
            android:drawableLeft="@drawable/ic_facebook"
            android:paddingLeft="16dp"
            android:paddingRight="0dp"
            android:text="@string/facebook"
            android:textColor="@color/colorWhite"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/toggle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:padding="5dp"
        android:text="@string/show"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintBottom_toTopOf="@+id/signIn_forget_password_text_view"
        app:layout_constraintEnd_toEndOf="@+id/signIn_password_editText"
        app:layout_constraintTop_toBottomOf="@+id/signIn_email_editText" />

</android.support.constraint.ConstraintLayout>