<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activties.ForgetPasswordActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/colorAccent"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/forget_password_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/forget_password"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite"
            />

        <TextView
            android:id="@+id/message_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:text="@string/reset_password_instructions"
            android:textSize="14sp"
            android:textColor="@color/colorWhite"
            />

        <EditText
            android:id="@+id/reset_email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/comment_background"
            android:hint="البريد الإلكتروني"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:elevation="10dp"
            android:layout_margin="30dp"
            >

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/RippleStyleGrey"
                >

                <Button
                    android:id="@+id/btn_reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_password"
                    android:background="@android:color/white"
                    />

            </com.balysv.materialripple.MaterialRippleLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>